# singularity-plugins

./: meson.build
clipboard-history/: clipboard-history.vala
exe-icon/: exe-icon.plugin  exe_icon_plugin.vala  meson.build
media-controls/: media-controls.vala
mpris-dock/: mpris-dock.vala
tray-icons/: tray-icons.vala  tray_item.vala
